--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 .linkNav {
     margin-left: 1rem;
     margin-right: 1rem;
@@ -12,25 +13,27 @@
     font-size: x-large;
 }
 
+
 .fondoAgua {
     background-size: cover;
     background-repeat: no-repeat;
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../assets/Images/agua.jpg);
-    padding: 8.78rem;
     text-align: center;
     color: rgb(255, 255, 255);
-
+    padding-top: 8rem;
+    padding-bottom: 8rem;
     }
 
 .poolClean {
-    font-size: 5rem;
-    justify-content: center;
+    flex-wrap: wrap;
     display: flex;
+    font-size: 4rem;
+    justify-content: center;
 }
 
 .empresa {
-    padding: 3rem;
-    font-size: 2.1rem;
+    padding: 2rem;
+    font-size: 2rem;
 }
 
 .texto{
@@ -43,4 +46,19 @@
 }
 .fondoTexto{
     background-color: rgba(1, 0, 41, 0.309);
+}
+
+.textoCard{
+    text-align: center;
+
+}
+
+.imgCard{
+    margin-top: 1rem;
+    border-radius: 0.375rem;
+    
+}
+
+.tarjeta{
+    background-color: rgb(113, 179, 255);
 }
